Updates from Overleaf

--- a/02_mainmatter/ch4_Analyse.tex
+++ b/02_mainmatter/ch4_Analyse.tex
@@ -135,7 +135,7 @@ Der operative Beginn der Validierungsphase erfolgt durch die Zusammenstellung de
 
 Im Gegensatz zur klassischen Projektabwicklung, bei der ausführende Firmen erst nach Abschluss der Planung vertraglich gebunden werden, integriert das TVD-Modell diese Akteure bereits in der Phase 1. Die vertragliche Grundlage hierfür bilden in der Regel vorgelagerte Dienstleistungsverträge (\textit{Preconstruction Services Agreements}), die eine Vergütung der Beratungs- und Kalkulationsleistungen vorsehen, ohne bereits die spätere Bauausführung fest zu beauftragen \autocite[vgl.]{heidemann_kooperative_2011}. Ziel dieser Struktur ist es, Planungs- und Kostenkompetenz in einer Entscheidungseinheit zu bündeln, um sofortiges Kostenfeedback zu ermöglichen.
 
-Inhaltlich beginnt die Zusammenarbeit des Kernteams mit einer gemeinsamen Definition des Werteverständnisses (\textit{Value Definition}. Diese greift die Vorgaben des Bauherren \enquote{Stimme des Kunden} auf und definiert die funktionalen Anforderungen, losgelöst von der physischen Lösung. Essenziell ist dabei der Transfer des Verständnisses vom reinen Bau-Soll hin zum wirtschaftlichen Zweck der Investition (\textit{Business Case}). Das Team muss die strategischen Ziele und Wertvorstellungen des Kunden verstehen, um in der späteren Planung Konflikte autonom lösen zu können \autocite[vgl. S.13]{ballard_target_2025}.
+Inhaltlich beginnt die Zusammenarbeit des Kernteams mit einer gemeinsamen Definition des Werteverständnisses (\textit{Value Definition}). Diese greift die Vorgaben des Bauherren \enquote{Stimme des Kunden} auf und definiert die funktionalen Anforderungen, losgelöst von der physischen Lösung. Essenziell ist dabei der Transfer des Verständnisses vom reinen Bau-Soll hin zum wirtschaftlichen Zweck der Investition (\textit{Business Case}). Das Team muss die strategischen Ziele und Wertvorstellungen des Kunden verstehen, um in der späteren Planung Konflikte autonom lösen zu können \autocite[vgl. S.13]{ballard_target_2025}.
 
 Den Abschluss dieses Initialisierungsprozesses bildet die Überführung der subjektiven Kundenwünsche in objektive \textbf{\ac{CoS}}. Während die Wertvorstellungen oft abstrakt formuliert sind, stellen die CoS konkrete Kriterien dar (z.B. spezifische Anforderungen an Flexibilität, Akustik oder Energieeffizienz), die erfüllt sein müssen, damit das Projekt als erfolgreich betrachtet wird. Sie fungieren als qualitative Steuerungsgröße für alle weiteren Entscheidungen im Planungs- und Realisierungsprozess. Eine Kosteneinsparung, die zur Verletzung der \ac{CoS} führt, wird nicht als Effizienzgewinn, sondern als unzulässige Wertminderung betrachtet \autocite[vgl. S. 120]{ballard_target_2025}.
 
@@ -175,7 +175,7 @@ Die von Granja et al. (2023) geforderte frühzeitige Einbindung ausführender Un
 Ein Unternehmen, das in Phase 0/1 an der Zielkostenfindung mitgewirkt hat, verfügt über einen Wissensvorsprung. Um den Grundsatz der Gleichbehandlung im späteren Wettbewerb um die Bauleistung nicht zu verletzen, droht diesem Unternehmen der Ausschluss vom Verfahren. Dies führt zu einem systemischen Bruch: Das wertvolle Wissen, das in der Beratungsphase aufgebaut wurde, darf nicht nahtlos in die Realisierungsphase überführt werden, was den Kernnutzen von TVD konterkariert.
 
 \minisec{Marktzutrittsbarrieren durch Digitalisierungsanforderungen (KMU-Lücke)}
-Effizientes TVD setzt laut Ouma et al. (2025) datenbasierte Entscheidungsprozesse voraus (\enquote{Quantitatively Managed}), was in der Praxis den Einsatz von BIM und modellbasierten Kalkulationsmethoden bedingt.
+Effizientes TVD setzt laut Ouma et al. (2025) datenbasierte Entscheidungsprozesse voraus (\enquote{Quantitatively Managed}), was in der Praxis den Einsatz von BIM und modellbasierten Kalkulationsmethoden bedingt.\autocite[vgl.]{ouma_target_2025}
 Diese Anforderung steht im Spannungsfeld zur mittelständischen Struktur der deutschen Bauwirtschaft. Vielen kleineren Handwerksbetrieben (KMU) fehlen die Ressourcen und die digitale Reife für eine Teilnahme an solch hochintegrierten Prozessen. Die strikte Anwendung von TVD-Standards droht somit, lokale und spezialisierte Handwerksbetriebe vom Wettbewerb auszuschließen und eine Marktkonzentration auf Großkonzerne zu fördern, was politischen Zielsetzungen oft widerspricht.
 
 \minisec{Dichotomie von Werkvertragsrecht und Dienstleistungsprozess}
@@ -292,7 +292,30 @@ Das entscheidende Kriterium für den Übergang in Phase 3 ist jedoch die Preissi
 \textbf{Das finale Gate (Release for Construction):}
 Erst wenn die Prognosekosten (Expected Cost) sicher unterhalb der Allowable Cost liegen, wird das Projekt zur physischen Realisierung freigegeben.
 
-> \textit{Transfer-Hinweis:} Die Synchronisation von Planungsfreigabe und absoluter Preissicherheit ist in Einheitspreisverträgen kaum abzubilden, da Endkosten hier oft erst nach Aufmaß feststehen. (Diskussion in Kap. 5).
+\subsection{Prozessuale und regulatorische Implementierungshürden der Planungsphase}
+\label{sec:4.4.6}
+
+Die operative Durchführung des Target Value Design in der Planungsphase erfordert einen kontinuierlichen, iterativen Arbeitsfluss (\enquote{Continuous Flow}), bei dem Planung, Kalkulation und Optimierung simultan erfolgen. Diese Methodik steht jedoch in direktem Konflikt mit der sequenziellen Logik des deutschen Ordnungsrahmens.
+
+\minisec{Die \enquote{Cost-Centricity}-Falle: Entfeinerung statt Wertsteigerung}
+Obwohl TVD theoretisch auf die Maximierung des Kundenwerts abzielt, beobachtet die Forschung in der Praxis eine starke Verengung des Fokus auf messbare Kostenziele (\enquote{Cost-Centricity}). Ouma et al. (2025) kritisieren in ihrem Reifegradmodell, dass aufgrund fehlender Methoden zur Quantifizierung von \enquote{weichem} Nutzen der monetäre Zielwert oft zur alleinigen Steuerungsgröße wird \autocite{ouma_target_2025}.
+In der deutschen Praxis führt dies dazu, dass TVD nicht als Instrument für Innovation, sondern als reines \enquote{Cost-Cutting}-Tool missverstanden wird. Anstatt bessere Lösungen zu entwickeln, wird der Entwurf lediglich \enquote{entfeinert} (Qualitätsreduktion), um die Kostenprognose (nach DIN 276) einzuhalten, was den eigentlichen Lean-Gedanken der Wertgenerierung konterkariert \autocite[vgl.]{miron_target_2015}.
+
+\minisec{Das HOAI-Honorar-Paradoxon}
+Das Prinzip des \enquote{Frontloading} verlangt, dass Planer und ausführende Unternehmen bereits in frühen Phasen (LPH 2/3) detaillierte Optimierungen vornehmen. Die HOAI, deren Honorarstruktur maßgeblich an die \enquote{anrechenbaren Kosten} (§ 33 HOAI) gekoppelt ist, setzt hier systemische Fehlanreize.
+Ein Architekt, der durch intensiven TVD-Einsatz eine kostengünstigere Lösung entwickelt, reduziert damit nicht nur die Baukosten des Bauherrn, sondern paradoxerweise auch seine eigene Vergütungsgrundlage. Ohne alternative Vergütungsmodelle (z.\,B. Zeithonorar mit Erfolgsbonus) bestraft das System den Planer ökonomisch für seinen Erfolg bei der Kostenoptimierung \autocite[vgl.]{kalusche_projektmanagement_2020}.
+
+\minisec{Diskontinuität durch das Schnittstellen-Problem der Leistungsphasen}
+TVD erfordert, dass der \textit{Level of Development} (LOD) des Gebäudemodells kontinuierlich wächst. Die deutsche Planungskultur ist hingegen durch die strikte Zäsur zwischen Genehmigungsplanung (LPH 4) und Ausführungsplanung (LPH 5) geprägt.
+Da oft erst mit Abschluss der LPH 4 die Baugenehmigung beantragt wird und erst danach die Werkplanung (häufig durch andere Akteure) beginnt, wird der iterative Fluss unterbrochen. Das Wissen der ausführenden Firmen kann oft nicht rechtssicher integriert werden, da formell noch der Architekt die \enquote{geistige Schöpfung} schuldet und haftet \autocite[vgl.]{breyer_partnerschaftliche_2023}.
+
+\minisec{Das Fast-Tracking-Dilemma im deutschen Genehmigungsrecht}
+Ein Kernprinzip von Lean Construction ist das \enquote{Set-Based Design} – das Offenhalten von Lösungsalternativen bis zum \enquote{Last Responsible Moment}. Dies kollidiert mit dem deutschen Baurecht, das für den Bauantrag eine weitgehend fixierte Planung verlangt.
+Während in anglo-amerikanischen Systemen Planung und Bau oft parallel laufen (\enquote{Fast-Tracking}), erfordert dies in Deutschland aufwendige Teilbaugenehmigungen (z.\,B. für Baugrube, Rohbau). Die bürokratische Hürde und das Risiko, dass spätere Ausbaustufen genehmigungsrechtlich scheitern, zwingen Projektteams dazu, Entscheidungen früher zu treffen, als es methodisch sinnvoll wäre \autocite[vgl.]{girmscheid_projektabwicklung_2016}.
+
+\minisec{Das Endkostenrisiko: Fehlende Preisfinalisierung bei Planungsabschluss}
+Im idealen TVD-Prozess markiert das Ende der Planungsphase die Fixierung eines verbindlichen Zielpreises (\textit{Target Cost}), der durch einen Risikopool abgesichert ist.
+Dem steht im deutschen Standard der Einheitspreisvertrag entgegen, bei dem die Vergütung nicht pauschaliert, sondern nach tatsächlich ausgeführter Menge (Aufmaß) erfolgt. Dies führt dazu, dass trotz abgeschlossener Planung keine Budgetstabilität herrscht, da Mengenmehrungen das Ergebnis nachträglich verfälschen können. Während TVD versucht, das Risiko durch \textit{Design Freeze} und Puffer vor Baubeginn zu managen, verlagert der Einheitspreisvertrag das Mengenrisiko in die Bauphase, was die finanzielle Steuerungswirkung des TVD untergräbt.
 
 
 
@@ -326,6 +349,21 @@ Das TVD-Modell endet nicht mit der Schlüsselübergabe, sondern mit einer formal
     \item \textbf{Wissenssicherung:} Abweichungen (sowohl positive als auch negative) werden analysiert, um die Kennzahlen für zukünftige Projekte ("Benchmarks" für Phase 0) zu schärfen.
 \end{itemize}
 
-> \textit{Transfer-Hinweis:} In der deutschen VOB-Realität ist Phase 3 oft durch Nachtragsmanagement ("Claims") geprägt. Der TVD-Ansatz, dass der Preis fixiert ist und Nachträge durch die vorherige Integration ausgeschlossen sind, erfordert vertraglich eine völlig andere Risikoverteilung als den klassischen Einheitspreisvertrag. (Diskussion in Kap. 5).
+\subsection{Hürden bei Abschluss und langfristiger Wertgenerierung}
+\label{sec:4.5.4}
+
+Die TVD-Methodik endet idealerweise nicht mit der Abnahme, sondern mündet in einen \textit{Continuous Improvement Process}, bei dem reale Kostendaten für künftige Projekte gesichert werden. Die Realität der deutschen Bauwirtschaft und die rechtlichen Rahmenbedingungen der VOB stellen hierbei jedoch signifikante Hindernisse dar.
+
+\minisec{Inkompatibilität von Kollektiventscheidungen und Individualhaftung}
+Ein Kern des TVD in der Realisierung ist die gemeinsame Entscheidungsfindung im \textit{Big Room} (\enquote{Best for Project}). Kommt es jedoch zu Mängeln, basiert das deutsche Haftungsrecht (und der Versicherungsschutz) auf dem Prinzip der Individualhaftung.
+Berufshaftpflichtversicherungen decken in der Regel nur Schäden ab, die durch das eigene Verschulden des Versicherungsnehmers entstanden sind. Eine \enquote{No-Blame}-Kultur, bei der das Team kollektiv für Fehler einsteht, ist ohne spezielle Projektversicherungspolicen (die in Deutschland noch unüblich sind) kaum abbildbar. Dies führt dazu, dass Akteure aus Haftungsangst dazu tendieren, Entscheidungen zu dokumentieren und abzugrenzen, anstatt sie kollaborativ zu treffen \autocite[vgl.]{breyer_partnerschaftliche_2023}.
+
+\minisec{Fehlendes \enquote{Organisational Learning} in temporären Projektorganisationen}
+Nach dem Reifegradmodell von Ouma et al. (2025) stellt das \enquote{Learning} (systematische Rückführung von Daten in Kennwert-Datenbanken) die höchste Stufe der TVD-Maturity dar \autocite{ouma_target_2025}.
+Die deutsche Baupraxis ist jedoch durch \textit{Ad-hoc-Teams} geprägt, die sich nach der Abnahme (§ 12 VOB/B) auflösen. Da Bauunternehmen und Planer rechtlich und wirtschaftlich getrennte Einheiten bleiben, gibt es keinen kommerziellen Anreiz für den Unternehmer, seine internen Kalkulationsdaten (\enquote{Urkalkulation}) für den Bauherrn oder den Architekten transparent aufzubereiten. Das projektimmanente Wissen verbleibt in den Silos der Firmen und steht für die Zielkostenfindung des nächsten Projekts nicht zur Verfügung, was die Lernkurve der Branche flach hält.
+
+\minisec{Rückfall in den Claim-Modus (VOB-Mentalität)}
+Das Anreizmodell des TVD (Pain/Gain-Share) funktioniert solange, wie der Risikotopf gefüllt ist. Kritisch wird die Systemstabilität, wenn durch unvorhergesehene Ereignisse der \enquote{Pain}-Bereich erreicht ist und der Verlust droht.
+Die Analyse zeigt, dass in dieser Stresssituation ein hoher Rückfalldruck in klassische Verhaltensmuster besteht. Anstatt gemeinsam Lösungen zu suchen, neigen Akteure dazu, in die Logik des Einheitspreisvertrags zurückzufallen und formale \enquote{Nachtragspotenziale} (z.\,B. über § 2 Abs. 5 VOB/B) zu suchen, um das eigene Unternehmen zu sichern \autocite[vgl.]{zimina_target_2012}. Die rechtliche Struktur der VOB, Konflikte über Schriftverkehr und Behinderungsanzeigen auszutragen, steht hier als \enquote{Exit-Option} bereit und gefährdet die Kooperation massiv.
 
 \clearpage
