--- a/02_mainmatter/ch5_Transfer.tex
+++ b/02_mainmatter/ch5_Transfer.tex
@@ -1,12 +1,19 @@
 \chapter{Transferleitfaden}
 \label{ch:transfer}
 
-Einleitung zu Kapitel 5 
+Im vorangegangenen Kapitel wurde das Prozessmodell des Target Value Design (TVD) für den deutschen Kontext hergeleitet. Dabei wurde an den Schnittstellen der einzelnen Phasen bereits evident, dass die naive Übertragung der Lean-Methodik auf die hiesige Baupraxis auf signifikante Widerstände stößt. Die in Kapitel 4 identifizierten \enquote{Sollbruchstellen} sind keine isolierten Einzelfälle, sondern Symptome tieferliegender struktureller Diskrepanzen.
 
-kurze Wiederholung/Zusammenfassung der in Kapitel 4 erarbeiteten/benannten Problemstellen
+Die Analyse zeigt, dass der Konflikt im Kern zwischen zwei gegensätzlichen Logiken besteht: Auf der einen Seite steht der TVD-Ansatz, der durch Probabilistik, Kollaboration und funktionale Leistungsbeschreibungen geprägt ist. Auf der anderen Seite steht das etablierte deutsche System aus VOB, HOAI und öffentlichem Haushaltsrecht, das auf Deterministik, strikter Phasentrennung und detaillierten Leistungsverzeichnissen basiert.
 
-gezielte Auswahl relevanter Probleme für die weitere Diskussion
-Begründung der Auswahl: warum habe ich diese Probleme gewählt?!
+Um diese Vielzahl an operativen Hürden – vom \enquote{Nicht-ROI-Dilemma} der Phase 0 bis zum \enquote{Haftungs-Vakuum} der Phase 3 – nicht nur deskriptiv aneinanderzureihen, sondern lösungsorientiert zu bewerten, erfolgt im Folgenden eine thematische Aggregation. Eine reine Einzelbetrachtung der 15 identifizierten Problemstellen würde den Blick auf die wechselseitigen Abhängigkeiten verstellen. Stattdessen werden die Hürden in drei übergeordnete \textit{systemische Spannungsfelder} (Cluster) zusammengefasst, die die Hauptdimensionen der Implementierungsproblematik abbilden:
+
+\begin{enumerate}
+    \item \textbf{Das Beschaffungs-Dilemma (Marktzugang und Recht):} Wie lassen sich kollaborative Teams formieren, wenn das Vergaberecht auf Wettbewerb und Preis fixiert ist? (Diskussion der Hürden aus Phase 1).
+    \item \textbf{Das Wert-Dilemma (Methodik und Steuerung):} Worauf wird optimiert, wenn ökonomische Werttreiber (ROI) fehlen und Normen den Lösungsraum einschränken? (Diskussion der Hürden aus Phase 0 und 2).
+    \item \textbf{Das Struktur-Dilemma (Anreize und Kultur):} Wie können kontinuierliche Lern- und Optimierungsprozesse etabliert werden, wenn Honorarordnungen und Haftungsregime diese bestrafen? (Diskussion der Hürden aus Phase 2 und 3).
+\end{enumerate}
+
+Ziel dieses Kapitels ist es, innerhalb dieser Cluster zu erörtern, inwieweit bestehende Lösungsansätze (wie Integrierte Projektabwicklung/IPA) diese Barrieren bereits senken können und an welchen Stellen auch mit neuen Vertragsmodellen \enquote{blinde Flecken} verbleiben.
 
 \section{Problem 1}
 \label{sec:6.1}
@@ -24,13 +31,8 @@ Begründung der Auswahl: warum habe ich diese Probleme gewählt?!
 
 
 
-\section{Problem 4}
-\label{sec:6.4}
 
-
-
-
-\section{Problem 5}
+\section{Zusammenfassung}
 \label{sec:6.5}
 
 
