--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,22 @@
 
+@misc{noauthor_burgerliches_1900,
+	title = {Bürgerliches {Gesetzbuch}},
+	shorttitle = {{BGB}},
+	url = {https://www.gesetze-im-internet.de/bgb/},
+	language = {Deutsch},
+	month = jan,
+	year = {1900},
+}
+
+@misc{noauthor_gesetz_2013,
+	title = {Gesetz gegen {Wettbewerbsbeschränkungen}},
+	shorttitle = {{GWB}},
+	url = {https://www.gesetze-im-internet.de/gwb/},
+	language = {Deutsch},
+	month = jun,
+	year = {2013},
+}
+
 @inproceedings{ouma_target_2025,
 	address = {Osaka and Kyoto, Japan},
 	title = {A {Target} {Value} {Maturity} {Model} for {Performance} {Target} {Management} in the {Design} {Phase} of {Lean} {Construction} {Projects}},
@@ -45,14 +63,6 @@
 	month = nov,
 	year = {2024},
 	pages = {1323--1334},
-}
-
-@book{noauthor_burgerliches_2025,
-	edition = {Nr. 364},
-	title = {Bürgerliches {Gesetzbuch} ({BGB})},
-	shorttitle = {{BGB}},
-	publisher = {Bundesministerium der Justiz / Bundesamt für Justiz},
-	year = {2025},
 }
 
 @book{aia_integrated_2007,
