Updates from Overleaf

--- a/08_bibliography/references.bib
+++ b/08_bibliography/references.bib
@@ -1,4 +1,61 @@
 
+@article{greb_projektantenproblematik_2024,
+	title = {Projektantenproblematik: {Vorbefassung} in {Vergabeverfahren}},
+	url = {https://www.dabonline.de/recht/projektantenproblematik-vorbefassung-vergabeverfahren/},
+	abstract = {Was ist bei der Projektantenproblematik zu beachten, wenn etwa ein Planungsbüros bei einer Vergabe beraten hat und selbst teilnehmen möchte?},
+	urldate = {2026-01-11},
+	journal = {Deutsches Architket:innen Blatt},
+	author = {Greb, Klaus},
+	year = {2024},
+}
+
+@techreport{hauptverband_der_deutschen_bauindustrie_ev_partnerschaftliche_2020,
+	address = {Berlin},
+	title = {Partnerschaftliche {Zusammenarbeit} für ein modernes {Baumanagement} im öffentlichen {Hochbau}},
+	institution = {Hauptverband der Deutschen Bauindustrie e.V.},
+	author = {Hauptverband der Deutschen Bauindustrie e.V.},
+	year = {2020},
+	pages = {6},
+}
+
+@techreport{berbner_bauindustrie_2024,
+	type = {Studie},
+	title = {Die {Bauindustrie} in {Krisenzeiten}},
+	language = {de},
+	institution = {PwC},
+	author = {Berbner, Rebekka and Elsholz, Christian and Hagenschulte, Julian and Nicklis, Martin},
+	year = {2024},
+	pages = {30},
+}
+
+@article{noauthor_geschaftsbericht_2023,
+	title = {Geschäftsbericht 2023–2024},
+	language = {de},
+	year = {2023},
+}
+
+@techreport{zdb_geschaftsbericht_2024,
+	address = {Berlin},
+	title = {Geschäftsbericht 2023/2024},
+	language = {de},
+	institution = {Zentralverband Deutsches Baugewerbe},
+	author = {ZDB},
+	year = {2024},
+}
+
+@misc{noauthor_verordnung_2016,
+	title = {Verordnung über die {Vergabe} öffentlicher {Aufträge}},
+	language = {Deutsch},
+	month = apr,
+	year = {2016},
+}
+
+@inproceedings{becker_adaptionen_2024,
+	title = {Adaptionen der {Integrierten} {Projektabwicklung} ({IPA}) für kleine und mittlere {Projekte}},
+	author = {Becker, Simon Christian and Friedinger, Carl Philipp},
+	year = {2024},
+}
+
 @misc{noauthor_burgerliches_1900,
 	title = {Bürgerliches {Gesetzbuch}},
 	shorttitle = {{BGB}},
@@ -910,12 +967,6 @@ Publisher: RWTH Aachen University},
 	doi = {10.1007/978-3-658-38254-4},
 }
 
-@article{becker_adaptionen_nodate,
-	title = {Adaptionen der {Integrierten} {Projektabwicklung} ({IPA}) f¸r kleine und mittlere {Projekte}},
-	language = {de},
-	author = {Becker, Simon Christian and Friedinger, Carl Philipp},
-}
-
 @book{zilch_bauwirtschaft_2013,
 	address = {Berlin, Heidelberg},
 	title = {Bauwirtschaft und {Baubetrieb}},
@@ -1041,3 +1092,5 @@ Publisher: RWTH Aachen University},
 	year = {2024},
 	pages = {47178},
 }
+
+
